# aithena

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md
.github/workflows/: c-cpp.yml
aithena/: CMakeLists.txt  alphazero.cc  alphazero.h  benchmark.cc  benchmark.h  game.cc  main.cc  main_game.cc  main_mcts.cc  mcts.cc
aithena/alphazero/: alphazero.cc  alphazero.h  move.cc  move.h  nn.cc  nn.h  node.cc  node.h
aithena/benchmark/: benchmark.h
aithena/board/: board.h  board_plane.h
aithena/chess/: game.cc  game.h  moves.cc  moves.h  piece.cc  piece.h  state.cc  state.h  util.cc  util.h
aithena/game/: game.h
aithena/mcts/: mcts.cc  mcts.h  node.cc  node.h
aithena/util/: dirichlet.cc  dirichlet.h
src/: CMakeLists.txt  alphazero.cc  benchmark.cc  main.cc  main.h  main_az.cc  main_game.cc  main_mcts.cc  mcts.cc
src/alphazero/: alphazero.cc  alphazero.h  mcts.cc  mcts.h  move.cc  move.h  neural_network.cc  neural_network.h  node.cc  node.h
src/benchmark/: benchmark.cc  benchmark.h  benchmark_set.cc
src/board/: board.cc  board.h  board_plane.cc  board_plane.h
src/chess/: action.cc  chess.h  direction.cc  direction.h  game.cc  game.h  moves.cc  moves.h  state.cc  state.h  util.cc  util.h  utils.cc  utils.h
src/game/: action.cc  action.h  chess.cc  chess.h  game.cc  game.h  state.cc  state.h
src/mcts/: mcts.cc  mcts.h  node.cc  node.h  tree.h
test/: CMakeLists.txt  test_alphazero.cc  test_board.cc  test_chess.cc  test_chess_fen.cc  test_chess_move_info.cc  test_direction.cc  test_game.cc  test_mcts_mcts.cc  test_mcts_node.cc  test_perft.cc  test_tree.cc
